crates/sui-prover/tests/snapshots/vector_ext/borrow_or_unknown.fail.move.snap
---
source: crates/sui-prover/tests/integration.rs
expression: output
---
exiting with verification errors
error: prover::ensures does not hold
   ┌─ tests/inputs/vector_ext/borrow_or_unknown.fail.move:19:5
   │
19 │     ensures(*borrow_or_unknown(&v, 5) == 0);
   │     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   │
   =     at tests/inputs/vector_ext/borrow_or_unknown.fail.move:16: test_out_of_range_not_specific
